deploy/monitoring/prometheus/assisted-installer-k8s-prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: assisted-installer-prometheus
  name: prometheus-k8s
  namespace: REPLACE_NAMESPACE
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: assisted-installer-prometheus
  type: NodePort
