deploy/monitoring/prometheus/assisted-installer-ocp-prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-k8s-tls
  labels:
    prometheus: assisted-installer-prometheus
  name: prometheus-k8s
  namespace: assisted-installer
spec:
  ports:
  - name: proxy
    port: 9091
    protocol: TCP
    targetPort: web-proxy
  selector:
    app: prometheus
    prometheus: assisted-installer-prometheus
  type: ClusterIP
